Bootstrap HAT job.jar before building

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,8 @@ jobs:
           cd babylon/hat
           export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
-          java hat.java bld
+          bash hat/bootstrap.bash
+          java -cp hat/job.jar --enable-preview --source 26 hat.java bld
 
       - name: Set Babylon Home Output
         id: set-path
