--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,8 @@ jobs:
 
       - name: Build and Test
         run: |
+          export JAVA_HOME=$JAVA_BABYLON_HOME
+          export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build
           ./gradlew test
 
@@ -103,5 +105,7 @@ jobs:
 
       - name: Run Integration Tests
         run: |
+          export JAVA_HOME=$JAVA_BABYLON_HOME
+          export PATH=$JAVA_HOME/bin:$PATH
           export TINY_LLAMA_PATH=$(pwd)/tinyllama-1.1b-chat-v1.0.Q2_K.gguf
           ./gradlew integrationTest
