--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,15 +86,13 @@ jobs:
 
       - name: Setup Environment
         run: |
+          echo "=== Debug: Listing artifact contents ==="
+          ls -la babylon-jdk/
+          echo "=== Checking for JDK ==="
+          find babylon-jdk -name "java" -type f 2>/dev/null | head -5 || echo "No java binary found"
+          echo "=== Checking for HAT ==="
+          find babylon-jdk -name "hat-core*.jar" -type f 2>/dev/null | head -5 || echo "No HAT jars found"
           echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
-          # The artifact was uploaded from babylon/ folder, so paths inside it are preserved relative to babylon/
-          # Least common ancestor was babylon/, so artifact contains:
-          #   build/linux-x86_64-server-release/images/jdk/...
-          #   hat/build/...
-          # We want JAVA_BABYLON_ROOT to point to where the 'jdk' and 'hat/build' are accessible.
-          # If we downloaded to 'babylon-jdk', then:
-          #   JAVA_HOME should be babylon-jdk/build/linux-x86_64-server-release/images/jdk
-          #   hat/build should be in babylon-jdk/hat/build
           chmod +x gradlew
 
       - name: Build and Test
