--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,38 +18,61 @@ jobs:
         with:
           repository: openjdk/babylon
           path: babylon
+          ref: code-reflection
 
       - name: Cache Babylon JDK and HAT
         id: cache-babylon
         uses: actions/cache@v4
         with:
           path: |
-            babylon/build/linux-x86_64-server-release/images/jdk
+            babylon/build
             babylon/hat/build
-          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('babylon/.git/refs/heads/master') }}
+          key: ${{ runner.os }}-babylon-hat-${{ hashFiles('.github/workflows/ci.yml') }}-${{ hashFiles('babylon/.git/HEAD') }}
+          restore-keys: |
+            ${{ runner.os }}-babylon-hat-${{ hashFiles('.github/workflows/ci.yml') }}-
+            ${{ runner.os }}-babylon-hat-
 
       - name: Install Build Dependencies
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libx11-dev libxext-dev libxrender-dev libxrandr-dev libxtst-dev libxt-dev libcups2-dev libasound2-dev libfontconfig1-dev autoconf
 
       - name: Setup Boot JDK
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
         uses: actions/setup-java@v4
         with:
-          java-version: '23'
+          java-version: '25'
           distribution: 'temurin'
 
       - name: Configure and Build Babylon
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
+        id: build-jdk
+        continue-on-error: true
         run: |
           cd babylon
-          bash configure
-          make images
+          if [ -f build/linux-x86_64-server-release/spec.gmk ]; then
+            echo "Build already configured, checking if update is needed..."
+            if ! make JOBS=$(nproc) CONF=linux-x86_64-server-release check-conf > /dev/null 2>&1; then
+              echo "Configuration is out of date, reconfiguring..."
+              make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
+            else
+              echo "Configuration is up to date."
+            fi
+          else
+            echo "Configuring Babylon JDK build..."
+            bash configure --with-conf-name=linux-x86_64-server-release --with-debug-level=release --with-native-debug-symbols=none --disable-warnings-as-errors
+          fi
+          
+          echo "Building Babylon JDK..."
+          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
+
+      - name: Retry Build if failed
+        if: steps.build-jdk.outcome == 'failure'
+        run: |
+          cd babylon
+          echo "Build failed, attempting reconfigure and retry..."
+          make reconfigure JOBS=$(nproc) CONF=linux-x86_64-server-release
+          make images JOBS=$(nproc) CONF=linux-x86_64-server-release
 
       - name: Build HAT
-        if: steps.cache-babylon.outputs.cache-hit != 'true'
         run: |
           cd babylon/hat
           export JAVA_HOME=$(pwd)/../build/linux-x86_64-server-release/images/jdk
