--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,9 +142,9 @@ jobs:
           chmod +x scripts/download_tinyllama.sh
           ./scripts/download_tinyllama.sh
 
-      - name: Run Integration Tests
+      - name: Run Plain Java Integration Tests
         run: |
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export TINY_LLAMA_PATH=$(pwd)/tinyllama-1.1b-chat-v1.0.Q2_K.gguf
-          ./gradlew integrationTest
+          ./gradlew plainJavaIntegrationTest
