--- a/.github/workflows/weekly-full-matrix.yml
+++ b/.github/workflows/weekly-full-matrix.yml
@@ -120,7 +120,7 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run Plain Java Baseline Test
+      - name: Run Plain Java Integration Tests
         timeout-minutes: 30
         env:
           CI: "true"
@@ -128,7 +128,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew integrationTest --tests "ChatIntegrationTest" --console=plain
+          ./gradlew plainJavaIntegrationTest --console=plain
 
       - name: Upload Baseline Results
         if: always()
@@ -194,8 +194,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          echo "Running ${{ matrix.kernel }} HAT kernel test"
-          ./gradlew integrationTest --tests "ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
+          ./gradlew hatSequentialIntegrationTest --tests "ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
 
       - name: Upload ${{ matrix.kernel }} Results
         if: always()
@@ -249,7 +248,7 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run All-HAT Integration Test (6/6 kernels)
+      - name: Run HAT Sequential Integration Tests
         timeout-minutes: 30
         env:
           CI: "true"
@@ -257,8 +256,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          echo "Running ALL 6 HAT kernels simultaneously"
-          ./gradlew integrationTest --tests "ChatIntegrationTestWithAllHAT" --console=plain
+          ./gradlew hatSequentialIntegrationTest --console=plain
 
       - name: Upload All-HAT Results
         if: always()
