Add HAT backend bug tests to CI pipeline
Runs openclBugTest on freshly-built HAT JARs from upstream Babylon source.
This will verify whether the FFIBackend IllegalAccessError on
ComputeEntrypoint.lowered is fixed in the latest upstream code.

On CI (ubuntu, no GPU): OpenCL test will skip gracefully, Java Sequential
and Java MT vector-add tests will run with fresh JARs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,6 +137,12 @@ jobs:
           ./gradlew build
           ./gradlew test
 
+      - name: Run HAT Backend Bug Tests (OpenCL FFI + Java MT)
+        run: |
+          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
+          export PATH=$JAVA_HOME/bin:$PATH
+          ./gradlew openclBugTest
+
       - name: Download TinyLlama
         run: |
           chmod +x scripts/download_tinyllama.sh
