Install PoCL CPU-based OpenCL runtime on CI
Adds pocl-opencl-icd to the CI runner so the OpenCL FFI backend
test actually exercises the FFIBackend code path instead of skipping
due to missing OpenCL drivers. PoCL provides a CPU-based OpenCL
implementation that requires no GPU hardware.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,13 @@ jobs:
           name: babylon-jdk
           path: babylon-jdk
 
+      - name: Install OpenCL CPU Runtime (PoCL)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pocl-opencl-icd ocl-icd-opencl-dev
+          echo "=== Installed OpenCL platforms ==="
+          clinfo --list 2>/dev/null || echo "clinfo not available, but PoCL ICD is installed"
+
       - name: Setup Environment
         run: |
           echo "=== Debug: Listing artifact contents ==="
