Add concurrency group to prevent E2E test cancellation
The FP16 inference test takes ~6 min on CI runners. Without an explicit
concurrency group, GitHub may cancel in-progress workflow runs when new
checks complete on the same PR. Setting cancel-in-progress: false ensures
the long inference test runs to completion.

--- a/.github/workflows/chat-test.yml
+++ b/.github/workflows/chat-test.yml
@@ -7,6 +7,10 @@ on:
       - '**.md'
       - 'docs/**'
   workflow_dispatch:
+
+concurrency:
+  group: chat-test-${{ github.head_ref || github.ref }}
+  cancel-in-progress: false
     inputs:
       test_scope:
         description: 'Which tests to run'
