Fix OOM: run only ChatIntegrationTest in chat-test baseline
The plainJavaIntegrationTest task runs 5 test classes that each load
the full FP16 model (~2.5GB). On GitHub's 7GB runner, this causes the
OOM killer to shut down the runner mid-inference.

Only run ChatIntegrationTest (the end-to-end validation) in chat-test.yml.
Other plain-java tests are already covered by ci.yml with TinyLlama.

--- a/.github/workflows/chat-test.yml
+++ b/.github/workflows/chat-test.yml
@@ -154,7 +154,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew plainJavaIntegrationTest --console=plain
+          ./gradlew plainJavaIntegrationTest --tests "com.arturskowronski.llama3babylon.hat.integration.chat.ChatIntegrationTest" --console=plain
 
       - name: Upload Baseline Results
         if: always()
