First iteration of GPU acceleration via HAT OpenCL and Java MT backends (#27)
* Add GPU acceleration via HAT OpenCL and Java MT backends

Add BackendType enum (JAVA_SEQ, JAVA_MT, OPENCL) for backend selection.
Thread backend choice through LlamaInference → LlamaModel → Accelerator.
Add OpenCL, MT, and FFI shared backend JARs to classpath with
--enable-native-access for FFI. Integration tests for both new backends.

* Test Refactor

* Test Restructuring and fix for build.gradle.kts

* Add inference benchmark across all four backends

Benchmarks Plain Java, HAT Java Sequential, HAT Java MT, and HAT OpenCL
backends with timing for model load and inference phases. Gracefully
handles backend failures (OpenCL FFI currently fails with IllegalAccessError
on ComputeEntrypoint.lowered private field access).

* Add minimal reproduction test for HAT OpenCL FFI IllegalAccessError

Trivial vector-add kernel isolates two upstream HAT bugs:

1. OpenCL FFI: FFIBackend.dispatchCompute accesses private
   ComputeEntrypoint.lowered field -> IllegalAccessError
2. Java MT: Dispatch succeeds but result buffer contains zeros
   (buffer visibility issue in standalone @Reflect test context)

Both bugs appear to be in HAT framework JARs. The OpenCL bug may
already be fixed in upstream source (FFIBackend now delegates through
invokeWithArgs) but HAT build system is currently broken, preventing
JAR rebuild to verify.

* Add HAT backend bug tests to CI pipeline

Runs openclBugTest on freshly-built HAT JARs from upstream Babylon source.
This will verify whether the FFIBackend IllegalAccessError on
ComputeEntrypoint.lowered is fixed in the latest upstream code.

On CI (ubuntu, no GPU): OpenCL test will skip gracefully, Java Sequential
and Java MT vector-add tests will run with fresh JARs.

* Fix OpenCL test to skip gracefully when drivers are missing

Backend.getBackend() throws ServiceConfigurationError (extends Error,
not Exception) when OpenCL native libs are unavailable. Catch Throwable
to han

--- a/.github/workflows/chat-test.yml
+++ b/.github/workflows/chat-test.yml
@@ -18,6 +18,10 @@ on:
           - all-hat
           - full-matrix
 
+concurrency:
+  group: chat-test-${{ github.head_ref || github.ref }}
+  cancel-in-progress: false
+
 jobs:
   build-babylon:
     runs-on: ubuntu-latest
@@ -142,7 +146,7 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run Plain Java Baseline Test
+      - name: Run Plain Java Baseline Tests
         timeout-minutes: 30
         env:
           CI: "true"
@@ -150,8 +154,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          # --console=plain prevents Gradle output buffering that causes GitHub Actions no-output timeout
-          ./gradlew integrationTest --tests "ChatIntegrationTest" --console=plain
+          ./gradlew plainJavaIntegrationTest --tests "com.arturskowronski.llama3babylon.hat.integration.chat.ChatIntegrationTest" --console=plain
 
       - name: Upload Baseline Results
         if: always()
@@ -208,7 +211,7 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run All-HAT Integration Test (6/6 kernels)
+      - name: Run HAT Sequential Integration Tests
         timeout-minutes: 30
         env:
           CI: "true"
@@ -216,8 +219,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          echo "Running ALL 6 HAT kernels simultaneously: GEMV, RMSNorm, RoPE, SiLU, Softmax, Attention"
-          ./gradlew integrationTest --tests "ChatIntegrationTestWithAllHAT" --console=plain
+          ./gradlew hatSequentialIntegrationTest --console=plain
 
       - name: Upload All-HAT Results
         if: always()
@@ -285,8 +287,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          echo "Running ${{ matrix.kernel }} HAT kernel test"
-          ./gradlew integrationTest --tests "ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
+          ./gradlew hatSequentialIntegrationTest --tests "ChatIntegrationTestWith${{ matrix.kernel }}HAT" --console=plain
 
       - name: Upload ${{ matrix.kernel }} Results
         if: always()
