--- a/.github/workflows/weekly-full-matrix.yml
+++ b/.github/workflows/weekly-full-matrix.yml
@@ -143,7 +143,7 @@ jobs:
   benchmarks:
     needs: build-babylon
     runs-on: ubuntu-latest
-    timeout-minutes: 90
+    timeout-minutes: 180
     steps:
       - name: Checkout Project
         uses: actions/checkout@v4
@@ -182,14 +182,14 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run Weekly Benchmarks (CPU + HAT Java)
+      - name: Run Weekly Benchmarks (Per Kernel x 4 Modes)
         env:
           CI: "true"
           LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
         run: |
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew benchmarkPlain benchmarkHatSeq benchmarkHatMt --console=plain
+          ./gradlew benchmarkKernelAll --console=plain
 
       - name: Upload Benchmark Results
         if: always()
@@ -197,12 +197,19 @@ jobs:
         with:
           name: weekly-results-benchmarks
           path: |
-            build/reports/tests/benchmarkPlain/
-            build/test-results/benchmarkPlain/
-            build/reports/tests/benchmarkHatSeq/
-            build/test-results/benchmarkHatSeq/
-            build/reports/tests/benchmarkHatMt/
-            build/test-results/benchmarkHatMt/
+            build/reports/tests/benchmarkKernelGEMV/
+            build/test-results/benchmarkKernelGEMV/
+            build/reports/tests/benchmarkKernelRMSNorm/
+            build/test-results/benchmarkKernelRMSNorm/
+            build/reports/tests/benchmarkKernelRoPE/
+            build/test-results/benchmarkKernelRoPE/
+            build/reports/tests/benchmarkKernelSiLU/
+            build/test-results/benchmarkKernelSiLU/
+            build/reports/tests/benchmarkKernelSoftmax/
+            build/test-results/benchmarkKernelSoftmax/
+            build/reports/tests/benchmarkKernelAttention/
+            build/test-results/benchmarkKernelAttention/
+            build/benchmark-results/results.tsv
           retention-days: 7
 
   all-hat-test:
