--- a/.github/workflows/weekly-full-matrix.yml
+++ b/.github/workflows/weekly-full-matrix.yml
@@ -128,7 +128,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew plainJavaIntegrationTest --console=plain
+          ./gradlew plainIntegrationTest --console=plain
 
       - name: Upload Baseline Results
         if: always()
@@ -136,8 +136,8 @@ jobs:
         with:
           name: weekly-results-baseline
           path: |
-            build/reports/tests/plainJavaIntegrationTest/
-            build/test-results/plainJavaIntegrationTest/
+            build/reports/tests/plainIntegrationTest/
+            build/test-results/plainIntegrationTest/
           retention-days: 7
 
   benchmarks:
@@ -212,8 +212,69 @@ jobs:
             build/benchmark-results/results.tsv
           retention-days: 7
 
+  regression-tests:
+    needs: build-babylon
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v4
+
+      - name: Download Babylon Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: babylon-jdk-weekly
+          path: babylon-jdk
+
+      - name: Setup Environment
+        run: |
+          JDK_PATH=babylon-jdk/build/linux-x86_64-server-release/images/jdk
+          chmod -R +x $JDK_PATH/bin/
+          find $JDK_PATH/lib -type f -name "jspawnhelper" -exec chmod +x {} \;
+          find $JDK_PATH/lib -type f -name "*.so" -exec chmod +x {} \;
+          echo "JAVA_BABYLON_ROOT=$(pwd)/babylon-jdk" >> $GITHUB_ENV
+          chmod +x gradlew
+
+      - name: Cache Llama 3.2 1B Model
+        id: cache-llama
+        uses: actions/cache@v4
+        with:
+          path: Llama-3.2-1B-Instruct-f16.gguf
+          key: llama-3.2-1b-instruct-f16-gguf
+
+      - name: Download Llama 3.2 1B Instruct FP16
+        if: steps.cache-llama.outputs.cache-hit != 'true'
+        run: |
+          chmod +x scripts/download_llama_fp16.sh
+          ./scripts/download_llama_fp16.sh
+
+      - name: Build Project
+        run: |
+          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
+          export PATH=$JAVA_HOME/bin:$PATH
+          ./gradlew build -x test --console=plain
+
+      - name: Run Weekly Regression Tests
+        env:
+          CI: "true"
+          LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
+        run: |
+          export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
+          export PATH=$JAVA_HOME/bin:$PATH
+          ./gradlew regressionTest --console=plain
+
+      - name: Upload Regression Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: weekly-results-regression
+          path: |
+            build/reports/tests/regressionTest/
+            build/test-results/regressionTest/
+          retention-days: 7
+
   all-hat-test:
-    needs: [baseline-test, benchmarks]
+    needs: [baseline-test, benchmarks, regression-tests]
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -254,7 +315,7 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run HAT Sequential Integration Tests (repeat x2)
+      - name: Run HAT Backend Integration Tests
         timeout-minutes: 30
         env:
           CI: "true"
@@ -262,8 +323,7 @@ jobs:
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
           export LLAMA_FP16_PATH=$(pwd)/Llama-3.2-1B-Instruct-f16.gguf
-          ./gradlew hatSequentialIntegrationTest --console=plain
-          ./gradlew hatSequentialIntegrationTest --console=plain
+          ./gradlew hatIntegrationTest --console=plain
 
       - name: Upload All-HAT Results
         if: always()
@@ -271,6 +331,6 @@ jobs:
         with:
           name: weekly-results-all-hat
           path: |
-            build/reports/tests/hatSequentialIntegrationTest/
-            build/test-results/hatSequentialIntegrationTest/
+            build/reports/tests/hatIntegrationTest/
+            build/test-results/hatIntegrationTest/
           retention-days: 7
