--- a/.github/workflows/weekly-full-matrix.yml
+++ b/.github/workflows/weekly-full-matrix.yml
@@ -182,14 +182,14 @@ jobs:
           export PATH=$JAVA_HOME/bin:$PATH
           ./gradlew build -x test --console=plain
 
-      - name: Run Weekly Benchmarks (Per Kernel x 4 Modes)
+      - name: Run Weekly Benchmarks (All Suites)
         env:
           CI: "true"
           LLAMA_FP16_PATH: ${{ github.workspace }}/Llama-3.2-1B-Instruct-f16.gguf
         run: |
           export JAVA_HOME=$JAVA_BABYLON_ROOT/build/linux-x86_64-server-release/images/jdk
           export PATH=$JAVA_HOME/bin:$PATH
-          ./gradlew benchmarkKernelAll --console=plain
+          ./gradlew benchmarkAll --console=plain
 
       - name: Upload Benchmark Results
         if: always()
@@ -209,6 +209,20 @@ jobs:
             build/test-results/benchmarkKernelSoftmax/
             build/reports/tests/benchmarkKernelAttention/
             build/test-results/benchmarkKernelAttention/
+            build/reports/tests/benchmark/
+            build/test-results/benchmark/
+            build/reports/tests/benchmarkMicroGEMV/
+            build/test-results/benchmarkMicroGEMV/
+            build/reports/tests/benchmarkMicroRMSNorm/
+            build/test-results/benchmarkMicroRMSNorm/
+            build/reports/tests/benchmarkMicroRoPE/
+            build/test-results/benchmarkMicroRoPE/
+            build/reports/tests/benchmarkMicroSiLU/
+            build/test-results/benchmarkMicroSiLU/
+            build/reports/tests/benchmarkMicroSoftmax/
+            build/test-results/benchmarkMicroSoftmax/
+            build/reports/tests/benchmarkMicroAttention/
+            build/test-results/benchmarkMicroAttention/
             build/benchmark-results/results.tsv
           retention-days: 7
 
